Fixed image stretching, fixed nav height, rolled back custom scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,13 @@ body [class*="col-"] {
     padding-left: 0;
 }
 
-::-webkit-scrollbar {
-    width: 5px;
+#navigation-wrapper::-webkit-scrollbar { 
+    display: none; 
 }
 
-::-webkit-scrollbar-track {
-    background: #1a1a1a;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #f24547;
+#navigation-wrapper { 
+    -ms-overflow-style: none;
+    overflow: auto;
 }
 
 .sweep {
@@ -79,8 +76,8 @@ body [class*="col-"] {
     font-size: 13px;
     height: 100%;
     padding: 45px 34px;
+    min-height: 50px;
     text-transform: uppercase;
-    z-index: 999;
 }
 
 #navigation-wrapper a {
@@ -347,11 +344,6 @@ body [class*="col-"] {
     margin-top: 5px;
 }
 
-.swiper-wrapper img {
-    width: 100%;
-    height: 100%;
-}
-
 .swiper-container-vertical>.swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0;
 }
@@ -433,6 +425,14 @@ body [class*="col-"] {
     #navigation-wrapper {
         position: relative;
         width: 100%;
+        padding: 0;
+        min-height: 60px;
+    }
+
+    #navigation-wrapper i.toggle-btn {
+        margin: 0;
+        padding: 0;
+        line-height: 40px;
     }
 
     #navigation-wrapper .toggle-btn {
@@ -457,7 +457,7 @@ body [class*="col-"] {
     }
 
     #navigation-wrapper .menu-list {
-        margin-top: 50px;
+        margin-top: 60px;
     }
 
     #sidebar {
@@ -465,10 +465,19 @@ body [class*="col-"] {
         width: 100%;
     }
 
+    .swiper-pagination .swiper-pagination-bullet {
+        width: 25px;
+        height: 32px;
+    }
+
+    .swiper-pagination .swiper-pagination-bullet .pagination-number {
+        padding-top: 5px;
+    }
+
     .swiper-container {
         margin-left: 0;
         max-width: 100%;
-        max-height: 600px;
+        max-height: 400px;
     }
 }
 
